--- a/TicketViewer.App.Web/Views/Home/TicketDetails.cshtml
+++ b/TicketViewer.App.Web/Views/Home/TicketDetails.cshtml
@@ -4,9 +4,27 @@
 }
 
 <div>
-    <h4>Tickets Details</h4>
+    <a href="javascript:void(0);" onclick="history.go(-1);">Back to Tickets List</a>
+    <h5 class="mt-3">Ticket Details</h5>
     <div>
-        <a href="javascript:void(0);" onclick="history.go(-1);">Back to Tickets List</a>
-        <p>@Model.Subject</p>
+        <div class="border p-3 d-flex justify-content-between">
+            <h6 class="m-0 blockquote">@Model.Id - @Model.Subject</h6>
+            <p class="m-0 text-muted">@Model.RequesterId on @Model.CreatedOn.ToString("MMMM dd, yyyy hh:mm tt")</p>
+        </div>
+        <div class="border border-top-0 p-3">
+            <p class="lead">@Model.Description</p>
+
+            <div class="mt-5 d-flex justify-content-between">
+                <div>
+                    <p><b>Status: </b> @Model.Status</p>
+                    <p><b>Type: </b> @Model.Type</p>
+                    <p><b>Priority: </b> @Model.Priority</p>
+                </div>
+                <div>
+                    <p><b>Tags: </b> @string.Join(", ", @Model.Tags)</p>
+                    <p><b>Last Updated: </b> @Model.UpdatedOn.ToString("MMMM dd, yyyy hh:mm tt")</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
