--- a/TicketViewer.App.Web/Views/Shared/Error.cshtml
+++ b/TicketViewer.App.Web/Views/Shared/Error.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2 class="text-danger">Error.</h2>
+<h3 class="text-danger">There is some error while processing your request.</h3>
 
 @if (Model.ShowRequestId)
 {
@@ -13,13 +13,12 @@
     </p>
 }
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+@if (Model.Exception != null)
+{
+    <h4>Message:</h4>
+    <p>@Model.Exception.Message.</p>
+
+    <p class="text-muted">@Model.InnerErrorMessage</p>
+}
+
+<h4>Please try again after some time.</h4>
