included few read me instructions

--- a/TicketViewer.App.Web/Views/Shared/Error.cshtml
+++ b/TicketViewer.App.Web/Views/Shared/Error.cshtml
@@ -21,4 +21,4 @@
     <p class="text-muted">@Model.InnerErrorMessage</p>
 }
 
-<h4>Please try again after some time.</h4>
+<h4>Please try again.</h4>
